add write permission

--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -1,5 +1,8 @@
 name: Update Evohome on HA Core Changes
 
+permissions:
+  contents: write
+
 on:
   schedule:
     - cron: "0 3 * * *"   # once per day at 03:00 UTC
