--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -71,9 +71,33 @@ jobs:
           # Cleanup
           rm -rf ha-core-tmp
 
-#      - name: Run update-evohome.sh
-#        if: steps.prev.outputs.previous != steps.hacore.outputs.hash
-#        run: |
-#          echo "New Home Assistant Core commit detected — running update-evohome.sh"
-#          chmod +x scripts/update-evohome.sh
-#          scripts/update-evohome.sh
+    - name: Stage evohome files (→ ha_evohome/)
+      if: steps.prev.outputs.previous != steps.hacore.outputs.hash
+      run: |
+          rm -rf ha_evohome
+          mkdir -p ha_evohome
+          cp -R ha-core-tmp/homeassistant/components/evohome/* ha_evohome/
+          echo "Copied files:"
+          ls -la ha_evohome
+          # Cleanup temp checkout
+          rm -rf ha-core-tmp
+
+      # Commit and push if there are changes
+    - name: Commit & push ha_evohome/ if changed
+      if: steps.prev.outputs.previous != steps.hacore.outputs.hash
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+          git add ha_evohome
+
+          if ! git diff --cached --quiet; then
+            commit_msg="chore: update ha_evohome from HA Core evohome ($(date -u +'%Y-%m-%d %H:%M:%S UTC'))"
+            git commit -m "$commit_msg"
+            git push
+            echo "Changes committed & pushed."
+          else
+            echo "No changes detected; nothing to commit."
+          fi
