--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -70,9 +70,9 @@ jobs:
           
             echo "Updating files in evohome_cc$i/"
             # Update the files within the integration with proper values
-            sed -i "/domain/ s/evohome/evohome_cc$i/" evohome_cc$i/manifest.json
-            sed -i '/{/a \ \ "version": "0.0.1",' evohome_$i/manifest.json
-            sed -i "/DOMAIN/ s/evohome/evohome_cc$i/" evohome_cc$i/const.py
+            sed -i "/domain/ s/evohome/evohome_cc$i/" custom_components/evohome_cc$i/manifest.json
+            sed -i '/{/a \ \ "version": "0.0.1",'     custom_components/evohome_cc$i/manifest.json
+            sed -i "/DOMAIN/ s/evohome/evohome_cc$i/" custom_components/evohome_cc$i/const.py
           done
 
       # 4) Determine if anything actually changed
