ensure custom_components folder

--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -53,6 +53,7 @@ jobs:
           #
           # List current folder contents & goto custom components folder         
           ls -al
+          mkdir -p custom_components
           ls -al custom_components/*          
                       
           # Delete all old evohome folders
