--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -53,7 +53,8 @@ jobs:
           #
           # List current folder contents & goto custom components folder         
           ls -al
-          mkdir -p custom_components
+          mkdir -p ./custom_components
+          ls -al
           ls -al custom_components/*          
                       
           # Delete all old evohome folders
