--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -55,7 +55,7 @@ jobs:
           ls -al
           mkdir -p ./custom_components
           ls -al
-          ls -al custom_components/*          
+          ls -al ./custom_components/*          
                       
           # Delete all old evohome folders
           echo "Removing all evohome_x folders..."
