allow empty directory

--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -54,8 +54,7 @@ jobs:
           # List current folder contents & goto custom components folder         
           ls -al
           mkdir -p ./custom_components
-          ls -al
-          ls -al ./custom_components/*          
+          ls -al ./custom_components          
                       
           # Delete all old evohome folders
           echo "Removing all evohome_x folders..."
