--- a/.github/workflows/run-on-ha-core-update.yml
+++ b/.github/workflows/run-on-ha-core-update.yml
@@ -119,3 +119,54 @@ jobs:
           git add custom_components
           git commit -m "chore(sync): evohome from home-assistant/core@${HA_SHA} (${HA_BRANCH}) [skip ci]"
           git push
+          
+      - name: Get latest release
+        if: steps.changes.outputs.changed == 'true'
+        id: latest
+        uses: actions/github-script@v7
+        with:
+          script: |
+            const latest = await github.rest.repos.getLatestRelease({
+              owner: context.repo.owner,
+              repo: context.repo.repo
+            }).catch(() => null);
+
+            if (!latest) {
+              // No release exists—start at v0.0.0
+              core.setOutput("latest_tag", "v0.0.0");
+            } else {
+              core.setOutput("latest_tag", latest.data.tag_name);
+            }
+
+      - name: Calculate next patch version
+        if: steps.changes.outputs.changed == 'true'
+        id: bump
+        run: |
+          TAG="${{ steps.latest.outputs.latest_tag }}"
+          echo "Latest tag: $TAG"
+
+          # Remove leading "v"
+          VERSION="${TAG#v}"
+
+          IFS='.' read -r MAJOR MINOR PATCH <<< "$VERSION"
+
+          # Increment PATCH only
+          PATCH=$((PATCH + 1))
+
+          NEW_TAG="v${MAJOR}.${MINOR}.${PATCH}"
+          echo "New version: $NEW_TAG"
+          echo "tag=$NEW_TAG" >> "$GITHUB_OUTPUT"
+
+      - name: Create GitHub Release
+        if: steps.changes.outputs.changed == 'true'
+        uses: softprops/action-gh-release@v2
+        with:
+          tag_name: ${{ steps.bump.outputs.tag }}
+          name: Release ${{ steps.bump.outputs.tag }}
+          generate_release_notes: true
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          
+          
+          
+          
